--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,20 +4,39 @@
   <title>Homebase</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/application.css">
+
     <script src='https://cdn.firebase.com/js/client/2.1.0/firebase.js'></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <meta charset="UTF-8">
     <%= csrf_meta_tags %>
 </head>
 <body>
-   <div>
+  <div>
+    <ul class="nav nav-pills">
+      <li role="presentation">
+        <%= link_to "Home", root_path %>
+      </li>
       <% if current_user %>
-        Signed in as <strong><%= current_user.name %></strong>!
-        <%= link_to "Sign out", signout_path, id: "sign_out" %>
+      <li role="presentation"><a href="#">Messages</a></li>
+        Signed in as <strong><%= current_user.name %> !</strong>
+      </li>
+      <li role="presentation">
+      </li>
+    </ul>
       <% else %>
+
+      <div class="logo"></div>
+      
+      <div class="sign-in-with-google">
+        <button type="button" class="btn btn-default btn-lg active">
         <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
+        </button>
+      </div>
       <% end %>
-    </div>
+  </div>
 <div>
   <%= yield %>
 </div>
